feat: 新增服务注册、发现客户端功能及其样例demo项目&已知问题修复